# Robotics-and-ROS-Learn-by-Doing-Manipulators

./: .gitignore  README.md
Section1-Course_Introduction/CAD/: EBA_01.00.009_servo_plate.SLDPRT  EBA_01.00.011_round_plate.SLDPRT  EBA_01.00.013_R01_right_finger.SLDPRT  EBA_01.00.014_R01_left_finger.SLDPRT  EBA_01.00.015_drive_gear.SLDPRT  EBA_01.00.016_R01_driven_gear.SLDPRT  microservoArm.SLDPRT  microservoArmLong.SLDPRT  microservoAssembly.SLDASM  microservoSG90.SLDPRT
Section3-Introduction_to_ROS/arduinobot_ws/src/arduinobot_test/: CMakeLists.txt
Section4-Digital_Twin/arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt  package.xml
Section4-Digital_Twin/arduinobot_ws/src/arduinobot_description/: package.xml
Section4-Digital_Twin/arduinobot_ws/src/arduinobot_description/urdf/: arduinobot.urdf.xacro
Section4-Digital_Twin/arduinobot_ws/src/arduinobot_test/: CMakeLists.txt  package.xml
Section5-ROS_Control/arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt
Section5-ROS_Control/arduinobot_ws/src/arduinobot_test/: CMakeLists.txt
Section5-ROS_Control/arduinobot_ws/src/arduinobot_test/scripts/: simple_publisher.py
Section6-ROS_Control/arduinobot_ws/src/arduinobot_test/: CMakeLists.txt  package.xml
Section6-Robot_Kinematics/arduinobot_ws/src/arduinobot_moveit/rviz/: moveit.rviz
Section6-Robot_Kinematics/arduinobot_ws/src/arduinobot_test/: CMakeLists.txt
Section7-Robot_Applications/arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt
Section7-Robot_Applications/arduinobot_ws/src/arduinobot_remote/: CMakeLists.txt
Section7-Robot_Applications/arduinobot_ws/src/arduinobot_remote/scripts/: task_server.py
Section7-Robot_Applications/arduinobot_ws/src/arduinobot_remote/src/: task_server.cpp
Section7-Robot_Applications/arduinobot_ws/src/arduinobot_test/: CMakeLists.txt  package.xml
Section8-Alexa_Integration/arduinobot_ws/src/arduinobot_bringup/launch/: sim_complete.launch
Section8-Alexa_Integration/arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt
Section8-Alexa_Integration/arduinobot_ws/src/arduinobot_remote/: CMakeLists.txt
Section8-Alexa_Integration/arduinobot_ws/src/arduinobot_remote/scripts/: task_server.py
Section8-Alexa_Integration/arduinobot_ws/src/arduinobot_test/: CMakeLists.txt
Section8-Alexa_Integration/arduinobot_ws/src/arduinobot_test/src/: simple_action_server.cpp
Section9-Build_the_Real_Robot/arduinobot_ws/src/arduinobot_bringup/launch/: complete.launch
Section9-Build_the_Real_Robot/arduinobot_ws/src/arduinobot_controller/launch/: controller.launch
(+5 files in other folders)
